--- a/src/App/App.csproj
+++ b/src/App/App.csproj
@@ -2,37 +2,23 @@
 
   <PropertyGroup>
     <TargetFrameworks>net6.0-android;net6.0-ios</TargetFrameworks>
-    <OutputType>Exe</OutputType>
     <RootNamespace>Bit.App</RootNamespace>
+    <OutputType>Exe</OutputType>
     <UseMaui>true</UseMaui>
-		<SingleProject>true</SingleProject>
-		<ImplicitUsings>enable</ImplicitUsings>
-
-    <!-- Display name -->
-		<ApplicationTitle>BitwardenApp</ApplicationTitle>
-
-		<!-- App Identifier -->
-		<ApplicationId>com.companyname.BitwardenApp</ApplicationId>
-
-		<!-- Versions -->
-		<ApplicationVersion>1</ApplicationVersion>
-
-    <!-- Required for C# Hot Reload -->
-		<UseInterpreter Condition="'$(Configuration)' == 'Debug'">True</UseInterpreter>
+	<ImplicitUsings>enable</ImplicitUsings>
 
     	<SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net6.0-ios'">14.2</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net6.0-android'">21.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+  <!--<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugType>pdbonly</DebugType>
     <DebugSymbols>true</DebugSymbols>
-  </PropertyGroup>
+  </PropertyGroup>-->
 
   <ItemGroup>
     <!-- <PackageReference Include="Microsoft.AppCenter.Crashes" Version="4.4.0" />
     <PackageReference Include="Plugin.Fingerprint" Version="2.1.4" /> -->
-    <PackageReference Include="SkiaSharp.Views.Forms" Version="2.80.3" />
     <PackageReference Include="CommunityToolkit.Maui" Version="1.0.0-pre7" />
     <!-- <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
     <PackageReference Include="ZXing.Net.Mobile" Version="2.4.1" />
@@ -183,7 +169,7 @@
     </EmbeddedResource>
   </ItemGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <Compile Update="Resources\AppResources.cs.Designer.cs">
       <DependentUpon>AppResources.cs.resx</DependentUpon>
       <DesignTime>True</DesignTime>
@@ -319,9 +305,9 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
-  </ItemGroup>
+  </ItemGroup>-->
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <EmbeddedResource Update="Resources\AppResources.cs.resx">
       <LastGenOutput>AppResources.cs.Designer.cs</LastGenOutput>
       <Generator>ResXFileCodeGenerator</Generator>
@@ -430,7 +416,7 @@
       <LastGenOutput>AppResources.zh-Hant.Designer.cs</LastGenOutput>
       <Generator>ResXFileCodeGenerator</Generator>
     </EmbeddedResource>
-  </ItemGroup>
+  </ItemGroup>-->
 
   <ItemGroup>
     <None Remove="Behaviors\" />
