--- a/src/App/App.csproj
+++ b/src/App/App.csproj
@@ -20,6 +20,9 @@
     <!-- <PackageReference Include="Microsoft.AppCenter.Crashes" Version="4.4.0" />
     <PackageReference Include="Plugin.Fingerprint" Version="2.1.4" /> -->
     <PackageReference Include="CommunityToolkit.Maui" Version="1.0.0-pre7" />
+    <PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="2.88.0-preview.209" />
+    <PackageReference Include="SkiaSharp.Views.Maui.Controls.Compatibility" Version="2.88.0-preview.209" />
+    <PackageReference Include="SkiaSharp.Views.Maui.Core" Version="2.88.0-preview.209" />
     <!-- <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
     <PackageReference Include="ZXing.Net.Mobile" Version="2.4.1" />
     <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.4.1" /> -->
