--- a/src/Android/Android.csproj
+++ b/src/Android/Android.csproj
@@ -3,11 +3,21 @@
     <UseMaui>true</UseMaui>
     <TargetFramework>net6.0-android</TargetFramework>
     <OutputType>Exe</OutputType>
-    <!-- <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest> -->
+    <!--<AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>-->
   </PropertyGroup>
     <PropertyGroup>
 		<UseInterpreter Condition="$(TargetFramework.Contains('-android'))">True</UseInterpreter>
 	</PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Xamarin.Firebase.Messaging" Version="122.0.0.3" />
+    <!-- <PackageReference Include="Xamarin.Google.Android.Material" Version="1.4.0.4" />
+    <PackageReference Include="Xamarin.Google.Dagger" Version="2.37.0" />
+    <PackageReference Include="Xamarin.GooglePlayServices.SafetyNet">
+      <Version>117.0.1</Version>
+    </PackageReference> -->
+  </ItemGroup>
+
    <ItemGroup>
     <ProjectReference Include="..\App\App.csproj">
       <Project>{EE44C6A1-2A85-45FE-8D9B-BF1D5F88809C}</Project>
@@ -17,6 +27,115 @@
       <Project>{4b8a8c41-9820-4341-974c-41e65b7f4366}</Project>
       <Name>Core</Name>
     </ProjectReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-hdpi\logo_legacy.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\logo_white_legacy.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\logo_legacy.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\logo_white_legacy.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\logo_legacy.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\logo_white_legacy.png" />
+    <AndroidResource Include="Resources\drawable\card.xml" />
+    <AndroidResource Include="Resources\drawable\cog_environment.xml" />
+    <AndroidResource Include="Resources\drawable\cog_settings.xml" />
+    <AndroidResource Include="Resources\drawable\icon.xml" />
+    <AndroidResource Include="Resources\drawable\ic_launcher_foreground.xml" />
+    <AndroidResource Include="Resources\drawable\ic_warning.xml" />
+    <AndroidResource Include="Resources\drawable\id.xml" />
+    <AndroidResource Include="Resources\drawable\info.xml" />
+    <AndroidResource Include="Resources\drawable\list_item_bg.xml" />
+    <AndroidResource Include="Resources\drawable\lock.xml" />
+    <AndroidResource Include="Resources\drawable\login.xml" />
+    <AndroidResource Include="Resources\drawable\logo.xml" />
+    <AndroidResource Include="Resources\drawable\logo_white.xml" />
+    <AndroidResource Include="Resources\drawable\send.xml" />
+    <AndroidResource Include="Resources\drawable\pencil.xml" />
+    <AndroidResource Include="Resources\drawable\plus.xml" />
+    <AndroidResource Include="Resources\drawable\generate.xml" />
+    <AndroidResource Include="Resources\drawable\search.xml" />
+    <AndroidResource Include="Resources\drawable\shield.xml" />
+    <AndroidResource Include="Resources\drawable-v23\splash_screen.xml" />
+    <AndroidResource Include="Resources\drawable-v23\splash_screen_dark.xml" />
+    <AndroidResource Include="Resources\drawable\switch_thumb.xml" />
+    <AndroidResource Include="Resources\layout\progress_dialog_layout.xml" />
+    <AndroidResource Include="Resources\layout\Tabbar.axml" />
+    <AndroidResource Include="Resources\layout\Toolbar.axml" />
+    <AndroidResource Include="Resources\mipmap-anydpi-v26\ic_launcher.xml" />
+    <AndroidResource Include="Resources\mipmap-anydpi-v26\ic_launcher_round.xml" />
+    <AndroidResource Include="Resources\mipmap-hdpi\ic_launcher.png" />
+    <AndroidResource Include="Resources\mipmap-hdpi\ic_launcher_round.png" />
+    <AndroidResource Include="Resources\mipmap-mdpi\ic_launcher.png" />
+    <AndroidResource Include="Resources\mipmap-mdpi\ic_launcher_round.png" />
+    <AndroidResource Include="Resources\mipmap-xhdpi\ic_launcher.png" />
+    <AndroidResource Include="Resources\mipmap-xhdpi\ic_launcher_round.png" />
+    <AndroidResource Include="Resources\mipmap-xxhdpi\ic_launcher.png" />
+    <AndroidResource Include="Resources\mipmap-xxhdpi\ic_launcher_round.png" />
+    <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_launcher.png" />
+    <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_launcher_round.png" />
+    <AndroidResource Include="Resources\values-night\styles.xml" />
+    <AndroidResource Include="Resources\values\styles.xml" />
+    <AndroidResource Include="Resources\values\colors.xml" />
+    <AndroidResource Include="Resources\values\manifest.xml" />
+    <AndroidResource Include="Resources\values-v30\manifest.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\splash_screen.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AndroidResource Include="Resources\xml\accessibilityservice.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\xml\autofillservice.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\xml\filepaths.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\xml\network_security_config.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\values\strings.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\values\ic_launcher_background.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\autofill_listitem.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-hdpi\yubikey.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xhdpi\yubikey.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xxhdpi\yubikey.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\slider_thumb.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\splash_screen_dark.xml">
+      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\values\dimens.xml">
+      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\xml\app_restrictions.xml">
+      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\values-v30\" />
   </ItemGroup>
 </Project>
 
