--- a/src/iOS/iOS.csproj
+++ b/src/iOS/iOS.csproj
@@ -1,4 +1,57 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <UseMaui>true</UseMaui>
+    <TargetFramework>net6.0-ios</TargetFramework>
+    <OutputType>Exe</OutputType>
+  </PropertyGroup>
+ <ItemGroup>
+    <ProjectReference Include="..\ArtAuction\ArtAuction.csproj">
+      <Project>{1DA2BE49-892A-4533-92BA-CDDA568441B8}</Project>
+      <Name>ArtAuction</Name>
+    </ProjectReference>
+  </ItemGroup>
+      <PropertyGroup>
+		<RuntimeIdentifier Condition="$(TargetFramework.Contains('-ios'))">iossimulator-x64</RuntimeIdentifier>
+	</PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\App\App.csproj">
+      <Project>{EE44C6A1-2A85-45FE-8D9B-BF1D5F88809C}</Project>
+      <Name>App</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{4b8a8c41-9820-4341-974c-41e65b7f4366}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\iOS.Autofill\iOS.Autofill.csproj">
+      <Project>{8a3ecd75-3ec8-4cb3-b3a2-a73a724c279a}</Project>
+      <Name>iOS.Autofill</Name>
+      <IsAppExtension>true</IsAppExtension>
+      <IsWatchApp>false</IsWatchApp>
+    </ProjectReference>
+    <ProjectReference Include="..\iOS.Core\iOS.Core.csproj">
+      <Project>{e71f3053-056c-4381-9638-048ed73bdff6}</Project>
+      <Name>iOS.Core</Name>
+      <IsAppExtension>false</IsAppExtension>
+      <IsWatchApp>false</IsWatchApp>
+    </ProjectReference>
+    <ProjectReference Include="..\iOS.Extension\iOS.Extension.csproj">
+      <Project>{324be76c-38fa-4f11-8bb1-95c7b3b1b545}</Project>
+      <Name>iOS.Extension</Name>
+      <IsAppExtension>true</IsAppExtension>
+      <IsWatchApp>false</IsWatchApp>
+    </ProjectReference>
+    <ProjectReference Include="..\iOS.ShareExtension\iOS.ShareExtension.csproj">
+      <IsAppExtension>true</IsAppExtension>
+      <Project>{F8C3F648-EA5A-4719-8005-85D1690B1655}</Project>
+      <Name>iOS.ShareExtension</Name>
+      <IsWatchApp>false</IsWatchApp>
+    </ProjectReference>
+  </ItemGroup>
+  </Project>
+
+
+
+<!-- <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -425,4 +478,4 @@
     <Folder Include="Resources\Assets.xcassets\ic_warning.imageset\" />
     <Folder Include="Resources\Assets.xcassets\LaunchScreen.imageset\" />
   </ItemGroup>
-</Project>
+</Project> -->
