--- a/src/App/App.csproj
+++ b/src/App/App.csproj
@@ -129,6 +129,7 @@
   </ItemGroup>-->
 
   <ItemGroup>
+    <Folder Include="Platforms\Android\Resources\" />
     <Folder Include="Resources\" />
     <Folder Include="Behaviors\" />
     <Folder Include="Controls\AccountSwitchingOverlay\" />
