--- a/src/Android/Android.csproj
+++ b/src/Android/Android.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net6.0-android</TargetFramework>
     <OutputType>Exe</OutputType>
     <!--<AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>-->
+    <ValidateExecutableReferencesMatchSelfContained>false</ValidateExecutableReferencesMatchSelfContained>
+
+    <SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net6.0-android'">31.0</SupportedOSPlatformVersion>
   </PropertyGroup>
     <PropertyGroup>
 		<UseInterpreter Condition="$(TargetFramework.Contains('-android'))">True</UseInterpreter>
